Change title and content from 'The Portfolio' to 'EchoFrame'
Updated the title and content to reflect the new branding.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>The Portfolio</title>
+    <title>EchoFrame</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
 <body>
 
 <div class="container">
-    <h1>The Portfolio</h1>
+    <h1>EchoFrame</h1>
 
 <!---- Portfolio Grid ---->
     <div class="row">
@@ -49,10 +49,10 @@
     <div class="row">
         <div class="col-md-12 col-xs-12">
             <h3>About</h3>
-            <p><span style="font-family: Satisfy">The Portfolio</span> is a simple one page Bootstrap theme for traditional artists or freelancers. A responsive grid style with hover effects and modal windows showcasing your artwork full size.</p>
+            <p><span style="font-family: Satisfy">EchoFrame</span> is a fictional photography and storytelling studio that captures raw emotions, fleeting moments, and the stories hidden between frames. It’s not just about taking photos — it’s about freezing feelings in time..</p>
         </div>
             <div class="col-md-12 col-xs-12">
-                <p>This simple template is the perfect starting point. The files include HTML, CSS, and JavaScript files. <span style="font-family: Satisfy">The Portfolio</span> is free to use for personal projects.</p>
+                <p>nWe believe the most powerful pictures are the ones that speak without words. From intimate portraits to urban landscapes, our goal is to capture the emotion behind every frame. <span style="font-family: Satisfy">EchoFrame</span> Founded by a creative team that sees beauty in the unnoticed, we blend art and emotion to tell visual stories that resonate. Whether it’s a smile, a shadow, or a passing glance — we believe every frame has a voice.</p>
                 <p><button type="button" class="btn btn-red btn-lg">Download Files</button></p>
         </div>
     </div>
